<resources>
    <!--App name&Version-->
    <string name="app_name">LuckyCalendar</string>
    <string name="versionname">1.0.1</string>

    <string name="create_account"><u>Create Account</u></string>
    <!-- 날짜 관련 string   -->
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wendsday">Wed</string>
    <string name="Turseday">Thr</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="describe_your_mood_in_one_word">Describe your mood in one word…</string>
    <string name="what_is_your_mood_today">What is your mood today?</string>
    <string name="dateDemo">Select day</string>
    <string name="boring_icon_button">Boring Icon/Button</string>
    <string name="happy_icon">Happy Icon</string>
    <string name="sad_icon">Sad Icon</string>
    <string name="stressed_icon">Stressed Icon</string>
    <string name="plus">+</string>
    <string name="_20">/20</string>
    <string name="logo">Logo</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="demousername">Set Your Username</string>
    <string name="demodate">Mar. 18, 2023</string>
    <string name="with_moodcalendar_from">With Mood</string>
    <string name="mobile_num">Mobile Num.</string>
    <string name="DemoPhoneNum">+82–10–0000–0000</string>
    <string name="DemoEmail">michael.han@thxto.me</string>
    <string name="e_mail">E-Mail</string>
    <string name="user_info">User Info.</string>
    <string name="settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="how_was_your_day_team_11">How was Your Day? (Team 11)</string>
    <string name="credit_1">Mobile Programming (14454004) Spring 2023,\nSchool of Computing, Gachon Univ.\nInstructor: Prof. Youngmin Oh\n(youngminoh@gachon.ac.kr)</string>
    <string name="version">Version</string>
    <string name="credit_2">How was Your Day?👋 (Team 11)\nJaedeok \"Michael\" Han\n(202135593, hjd0907@gachon.ac.kr)\nHyo young Shin\n(202035348, hyashin1998@gmail.com)\nHangyeol Seo\n(201935063, dongha313@gmail.com)</string>
    <string name="daily_line">오늘의 한줄평…</string>
    <string name="gachon_univ_logo">Gachon Univ. Logo</string>

</resources>