<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/statistical_bg_gradation">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_static"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:background="#A6A6A6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <!--                &lt;!&ndash;                TODO: ImageView Crop(https://jeong9216.tistory.com/9)&ndash;&gt;-->
                    <!--                <ImageView-->
                    <!--                    android:id="@+id/ProfilePic"-->
                    <!--                    android:layout_width="100dp"-->
                    <!--                    android:layout_height="100dp"-->
                    <!--                    android:background="@drawable/inputbox"-->
                    <!--                    android:clickable="true"-->
                    <!--                    android:contentDescription="@string/profile_pic"-->
                    <!--                    android:focusable="true"-->
                    <!--                    android:onClick="modProfilePic"-->
                    <!--                    android:padding="3dp"-->
                    <!--                    android:scaleType="fitCenter"-->
                    <!--                    android:src="@drawable/demoprofilepic" />-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/UserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ibm_plex_sans"
                            android:text="@string/demousername"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/with_moodcalendar_from"
                                android:textColor="#A6A6A6"
                                android:textSize="11sp" />

                            <!--                        <TextView-->
                            <!--                            android:id="@+id/initDate"-->
                            <!--                            android:layout_width="wrap_content"-->
                            <!--                            android:layout_height="wrap_content"-->
                            <!--                            android:paddingStart="5dp"-->
                            <!--                            android:paddingEnd="5dp"-->
                            <!--                            android:text="@string/demodate"-->
                            <!--                            android:textColor="#A6A6A6"-->
                            <!--                            android:textSize="11sp" />-->
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/inputbox"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/user_info"
                        android:textSize="17.5sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="5dp"
                        android:background="#A6A6A6" />

                    <!--                <LinearLayout-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="48dp"-->
                    <!--                    android:gravity="center"-->
                    <!--                    android:paddingHorizontal="20dp">-->

                    <!--                    <TextView-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:text="@string/mobile_num"-->
                    <!--                        android:textSize="16sp" />-->

                    <!--                    <View-->
                    <!--                        android:layout_width="0dp"-->
                    <!--                        android:layout_height="48dp"-->
                    <!--                        android:layout_weight="1" />-->

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/MobileNum"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:clickable="true"-->
                    <!--                        android:focusable="true"-->
                    <!--                        android:onClick="modUserNum"-->
                    <!--                        android:text="@string/DemoPhoneNum"-->
                    <!--                        android:textSize="16sp" />-->


                    <!--                </LinearLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:paddingHorizontal="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/e_mail"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/UserEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/DemoEmail"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:paddingHorizontal="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fui_password_hint"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/modPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <!--                <View-->
                    <!--                    android:layout_width="match_parent"-->
                    <!--                    android:layout_height="1dp"-->
                    <!--                    android:layout_marginHorizontal="10dp"-->
                    <!--                    android:layout_marginTop="5dp"-->
                    <!--                    android:background="#A6A6A6" />-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/inputbox"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/about_us"
                        android:textSize="17.5sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="5dp"
                        android:background="#A6A6A6" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:paddingHorizontal="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/version"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/Setting1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/versionname"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp">

                        <!--                        <TextView-->
                        <!--                            android:layout_width="wrap_content"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:gravity="center"-->
                        <!--                            android:paddingVertical="5dp"-->
                        <!--                            android:text="@string/how_was_your_day_team_11"-->
                        <!--                            android:textSize="14sp" />-->

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/gachon_univ_logo"
                            android:src="@drawable/gachon_univ_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingVertical="5dp"
                            android:text="@string/credit_1"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingVertical="10dp"
                            android:paddingBottom="5dp"
                            android:text="@string/credit_2"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>