<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPage">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_static"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="#A6A6A6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <!--                TODO: ImageView Crop(https://jeong9216.tistory.com/9)-->
                <ImageView
                    android:id="@+id/ProfilePic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/inputbox"
                    android:clickable="true"
                    android:contentDescription="@string/profile_pic"
                    android:focusable="true"
                    android:onClick="modProfilePic"
                    android:padding="3dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/DemoProfilePic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ibm_plex_sans"
                        android:text="@string/demousername"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/with_moodcalendar_from"
                            android:textColor="#A6A6A6"
                            android:textSize="11sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:text="@string/demodate"
                            android:textColor="#A6A6A6"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/inputbox"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/user_info"
                    android:textSize="17.5sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:background="#A6A6A6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_num"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/MobileNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="modUserNum"
                        android:text="@string/DemoPhoneNum"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/UserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="modUserEmail"
                        android:text="@string/DemoEmail"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_num"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/something"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DemoPhoneNum"
                        android:textSize="16sp" />
                </LinearLayout>

                <!--                <View-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="1dp"-->
                <!--                    android:layout_marginHorizontal="10dp"-->
                <!--                    android:layout_marginTop="5dp"-->
                <!--                    android:background="#A6A6A6" />-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/inputbox"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/settings"
                    android:textSize="17.5sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:background="#A6A6A6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_num"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/Setting1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DemoPhoneNum"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_mail"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/Setting2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DemoEmail"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:paddingHorizontal="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_num"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/Setting3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DemoPhoneNum"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>